set up non-probabilistic model

--- a/invert_operator.ipynb
+++ b/invert_operator.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ..src import _infer"
+    "from src import minimise_predictive_loss\n"
    ]
   },
   {
