--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inverting Hydrology with Neural Nets\n",
+    "# Inference in a PDE model\n",
     "\n"
    ]
   },
@@ -23,15 +23,6 @@
    "metadata": {},
    "source": [
     "## Set up"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src import minimise_predictive_loss\n"
    ]
   },
   {
@@ -78,18 +69,14 @@
     "import torch.nn.utils.parametrize as parametrize\n",
     "import torch.fft as fft\n",
     "import torch.nn as nn\n",
-    "from einops import rearrange, repeat\n",
     "from torch.optim import AdamW\n",
     "\n",
-    "from fourierflow.nn_modules.loss import LpLoss\n",
-    "from fourierflow.nn_modules.fourier_2d_generic import SimpleBlock2dGeneric\n",
-    "from fourierflow.viz.heatmap import navier_stokes_heatmap, multi_heatmap\n",
-    "from fourierflow.datastores.navier_stokes_h5 import NavierStokesH5InstDatastore\n",
-    "from fourierflow.utils import resolve_path\n",
-    "from fourierflow.optimizers import AdamWC\n",
-    "from torch.linalg import vector_norm, matrix_norm\n",
+    "from src.nn_modules.fourier_2d_generic import SimpleBlock2dGeneric\n",
+    "from src.heatmap import multi_heatmap\n",
+    "from src.datamodules.navier_stokes_h5 import NavierStokesH5InstDatastore\n",
+    "from src.utils import resolve_path\n",
     "\n",
-    "from scipy.optimize import bisect\n"
+    "\n"
    ]
   },
   {
@@ -110,207 +97,152 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### unregularized"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%aimport fourierflow._infer\n",
-    "infer = fourierflow._infer\n",
-    "%aimport fourierflow.viz.heatmap\n",
-    "heatmap = fourierflow.viz.heatmap\n",
-    "\n",
-    "# def plot_heatmap(model, i, loss, error, loss_fn, batch, pred, *args, **kwargs):\n",
-    "#     err_heatmap = target - est\n",
-    "#     fig = heatmap.multi_heatmap([target, est, err_heatmap], [\"target\", \"est\", \"error\"], *args, **kwargs)\n",
-    "#     plt.show();\n",
-    "#     # plt.savefig(f\"{i}.png\")\n",
-    "#     plt.close(\"all\");\n",
-    "\n",
-    "def plot_heatmap(model, i, loss, error, loss_fn, batch, pred, *args, **kwargs):\n",
-    "    target =  batch['latent'][0, :, :].cpu().numpy()\n",
-    "    est =  model.latent[0, :, :].cpu().numpy()\n",
-    "    err_heatmap = target - est\n",
-    "\n",
-    "    fig = heatmap.multi_heatmap(\n",
-    "        [target, est, err_heatmap],\n",
-    "        [\"Target\", \"Estimate\", \"Error\"], *args, **kwargs)\n",
-    "    plt.savefig(f\"paper_ml4ps/inverse_{i}.png\", dpi=300, bbox_inches='tight', pad_inches=0)\n",
-    "    np.savez_compressed(f\"paper_ml4ps/inverse_{i}.npz\",\n",
-    "        target=target,\n",
-    "        est=est,\n",
-    "        error=err_heatmap\n",
-    "    )\n",
-    "\n",
-    "    plt.show();\n",
-    "    plt.close(\"all\");\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.manual_seed(57)\n",
-    "\n",
-    "\n",
-    "infer.main(\n",
-    "    callback=plot_heatmap,\n",
-    "    lr=0.005,\n",
-    "    weight_decay=0.0,\n",
-    "    n_iter=50,\n",
-    "    check_int=5,\n",
-    "    ds_args={\n",
-    "        'data_path': '${FNO_DATA_ROOT}/navier-stokes/grf_forcing_mini.h5',\n",
-    "        'ssr': 1,\n",
-    "        'n_history': 2,\n",
-    "        'n_horizon': 1,\n",
-    "        'batch_size': 20,\n",
-    "        'latent_key': 'f',\n",
-    "        'forcing_key': '',\n",
-    "        'param_key': '',\n",
-    "        'n_workers': 0,\n",
-    "    })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.manual_seed(57)\n",
-    "\n",
-    "infer.main(\n",
-    "    callback=plot_heatmap,\n",
-    "    lr=0.005,\n",
-    "    weight_decay=0.0,\n",
-    "    n_iter=50,\n",
-    "    check_int=5,\n",
-    "    ds_args={\n",
-    "        'data_path': '${FNO_DATA_ROOT}/navier-stokes/grf_forcing_mini_1.h5',\n",
-    "        'ssr': 1,\n",
-    "        'n_history': 2,\n",
-    "        'n_horizon': 1,\n",
-    "        'batch_size': 20,\n",
-    "        'latent_key': 'f',\n",
-    "        'forcing_key': '',\n",
-    "        'param_key': '',\n",
-    "        'n_workers': 0,\n",
-    "    })"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# model = infer.main(\n",
-    "#     callback=plot_heatmap, lr=0.1, weight_decay=0.0, n_iter=10, mapping='fourier')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### diff penalty"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "class Fourier2dMapping(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Does not work because I tried to do something fancy with parameterizations.\n",
+    "    TODO.\n",
+    "    \"\"\"\n",
     "\n",
-    "def plot_heatmap(model, i, loss, error, loss_fn, batch, pred, *args, **kwargs):\n",
-    "    target =  batch['latent'][0, :, :].cpu().numpy()\n",
-    "    est =  model.latent[0, :, :].cpu().numpy()\n",
-    "    err_heatmap = target - est\n",
+    "    def __init__(self, modes: int=20, dims: Tuple[int, int]=(256,256)):\n",
+    "        super().__init__()\n",
+    "        self.modes = modes  # maybe just normalize the weights?\n",
+    "        self.dims = dims\n",
     "\n",
-    "    fig = heatmap.multi_heatmap(\n",
-    "        [target, est, err_heatmap],\n",
-    "        [\"Target\", \"Estimate\", \"Error\"], *args, **kwargs)\n",
-    "    plt.savefig(f\"paper_ml4ps/inverse_reg_{i}.png\", dpi=300, bbox_inches='tight', pad_inches=0)\n",
-    "    np.savez_compressed(f\"paper_ml4ps/inverse_reg_{i}.npz\",\n",
-    "        target=target,\n",
-    "        est=est,\n",
-    "        error=err_heatmap\n",
-    "    )\n",
-    "    plt.show();\n",
-    "    plt.close(\"all\");\n",
+    "    def forward(self, X):\n",
+    "        \"\"\"\n",
+    "        map from complex inputs on a half space to real inputs on a full space\n",
+    "        \"\"\"\n",
+    "        print(\"X\", X.shape, X.dtype)\n",
+    "        return fft.irfft2(X, s=self.dims, norm=\"ortho\")\n",
     "\n",
-    "torch.manual_seed(59)\n",
+    "    def right_inverse(self, Xp):\n",
+    "        \"\"\"\n",
+    "        map from real inputs on a full space to complex inputs on a half space\n",
+    "        \"\"\"\n",
+    "        return fft.rfft2(Xp, s=self.dims, norm=\"ortho\")\n",
     "\n",
-    "model, fit, etc = infer.main(\n",
-    "     ds_args={\n",
-    "        'data_path': '${FNO_DATA_ROOT}/navier-stokes/grf_forcing_mini.h5',\n",
-    "        'ssr': 1,\n",
-    "        'n_history': 2,\n",
-    "        'n_horizon': 1,\n",
-    "        'batch_size': 20,\n",
-    "        'latent_key': 'f',\n",
-    "        'forcing_key': '',\n",
-    "        'param_key': '',\n",
-    "        'n_workers': 0,\n",
-    "    },\n",
-    "    callback=plot_heatmap, lr=0.01, weight_decay=0.00, n_iter=200, pen_1=30,check_int=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
-    "def plot_heatmap(model, i, loss, error, loss_fn, batch, pred, *args, **kwargs):\n",
-    "    target =  batch['latent'][0, :, :].cpu().numpy()\n",
-    "    est =  model.latent[0, :, :].cpu().numpy()\n",
-    "    err_heatmap = target - est\n",
+    "class NaiveLatent(nn.Module):\n",
+    "    def __init__(self,\n",
+    "            process_predictor: \"nn.Module\",\n",
+    "            dims: Tuple[int, int]=(256,256),\n",
+    "            n_batch: int=1):\n",
+    "        super().__init__()\n",
+    "        self.dims = dims\n",
+    "        self.process_predictor = process_predictor\n",
+    "        ## Do not fit the process predictor weights\n",
+    "        for param in self.process_predictor.parameters():\n",
+    "            param.requires_grad = False\n",
+    "        self.latent = nn.Parameter(\n",
+    "            torch.zeros(\n",
+    "                (n_batch, *dims),\n",
+    "                dtype=torch.float32\n",
+    "            )\n",
+    "        )\n",
     "\n",
-    "    fig = heatmap.multi_heatmap(\n",
-    "        [target, est, err_heatmap],\n",
-    "        [\"Target\", \"Estimate\", \"Error\"], *args, **kwargs)\n",
-    "    plt.savefig(f\"paper_ml4ps/inverse_reg_{i}.png\", dpi=300, bbox_inches='tight', pad_inches=0)\n",
-    "    np.savez_compressed(f\"paper_ml4ps/inverse_reg_{i}.npz\",\n",
-    "        target=target,\n",
-    "        est=est,\n",
-    "        error=err_heatmap\n",
-    "    )\n",
-    "    plt.show();\n",
-    "    plt.close(\"all\");\n",
+    "    def weights_init(self):\n",
+    "        self.latent.data.normal_(0.0, 0.01)\n",
     "\n",
-    "torch.manual_seed(59)\n",
+    "    def forward(self, batch):\n",
+    "        #copy\n",
+    "        batch = dict(**batch)\n",
+    "        batch['latent'] = self.latent\n",
+    "        return self.process_predictor(batch)\n",
     "\n",
-    "model, fit, etc = infer.main(\n",
-    "     ds_args={\n",
-    "        'data_path': '${FNO_DATA_ROOT}/navier-stokes/grf_forcing_mini_1.h5',\n",
-    "        'ssr': 1,\n",
-    "        'n_history': 2,\n",
-    "        'n_horizon': 1,\n",
-    "        'batch_size': 20,\n",
-    "        'latent_key': 'f',\n",
-    "        'forcing_key': '',\n",
-    "        'param_key': '',\n",
-    "        'n_workers': 0,\n",
-    "    },\n",
-    "    callback=plot_heatmap, lr=0.01, weight_decay=0.00, n_iter=200, pen_1=30,check_int=5)"
+    "\n",
+    "\n",
+    "def fit(\n",
+    "        batch,\n",
+    "        model,\n",
+    "        loss_fn,\n",
+    "        optimizer,\n",
+    "        n_iter:int=20,\n",
+    "        check_int:int=1,\n",
+    "        clip_val: Optional[float] = None,\n",
+    "        callback = lambda *x: None,\n",
+    "        # pen_0: float = 0.0,\n",
+    "        pen_1: float = 0.0,\n",
+    "        pen_f: float = 0.0,\n",
+    "        stop_on_truth: bool = False,\n",
+    "        diminishing_returns=1.1,):\n",
+    "    model.train()\n",
+    "    model.weights_init()\n",
+    "    prev_loss_v = 10^5\n",
+    "    prev_error = 10^5\n",
+    "    prev_relerr = 10^3\n",
+    "    big_losses = []\n",
+    "    big_loss_fn = MSELoss(reduction='none')\n",
+    "    big_scale = big_loss_fn(torch.zeros_like(batch['latent']), batch['latent']).mean((1,2))\n",
+    "    scale = loss_fn(torch.zeros_like(batch['latent']), batch['latent']).item()\n",
+    "    for i in range(n_iter):\n",
+    "        # Compute prediction error\n",
+    "        pred = model(batch)\n",
+    "        loss = loss_fn(pred['forecast'], batch['y'])\n",
+    "\n",
+    "        # if pen_0 > 0.0:\n",
+    "            # loss += model.latent.square().mean()* pen_0\n",
+    "        if pen_1 > 0.0:\n",
+    "            loss += model.latent.diff(dim =-1).square().mean() * pen_1\n",
+    "            loss += model.latent.diff(dim =-2).square().mean() * pen_1\n",
+    "        if pen_f > 0.0:\n",
+    "            loss += (model.latentf.abs().square()).mean() * pen_1\n",
+    "\n",
+    "        # Backpropagation\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        if clip_val is not None:\n",
+    "            for group in optimizer.param_groups:\n",
+    "                torch.nn.utils.clip_grad_value_(group[\"params\"], clip_val)\n",
+    "\n",
+    "        optimizer.step()\n",
+    "        # sch = self.lr_schedulers()\n",
+    "        # sch.step()\n",
+    "\n",
+    "        if i % check_int == 0 or i==n_iter-1:\n",
+    "            with torch.no_grad():\n",
+    "                # recalc without penalties\n",
+    "                loss_v = loss_fn(pred['forecast'], batch['y']).item()\n",
+    "                if loss_v > diminishing_returns * prev_loss_v and i> 15:\n",
+    "                    print(\"Early stopping at optimum\")\n",
+    "                    break\n",
+    "                prev_loss_v = loss_v\n",
+    "                error = loss_fn(model.latent, batch['latent']).item()\n",
+    "                if error > diminishing_returns * prev_error and stop_on_truth:\n",
+    "                    print(\"Early stopping at minimum prediction error\")\n",
+    "                    break\n",
+    "                prev_error = error\n",
+    "                relerr = sqrt(error/scale)\n",
+    "                ##\n",
+    "                \n",
+    "                big_loss_v = big_loss_fn(pred['forecast'], batch['y']).mean((1,2,3))\n",
+    "                print(big_loss_v.shape)\n",
+    "                big_error = big_loss_fn(model.latent, batch['latent']).mean((1,2))\n",
+    "                big_relerr = torch.sqrt(big_error/scale)\n",
+    "                big_losses.append(dict(\n",
+    "                    big_loss=big_loss_v.detach().cpu().numpy(),\n",
+    "                    big_error = big_error.detach().cpu().numpy(),\n",
+    "                    relerr=big_relerr.detach().cpu().numpy()\n",
+    "                ))\n",
+    "\n",
+    "                print(\n",
+    "                    f\"loss: {loss:.3e}, error: {error:.3e}, relerror: {relerr:.3e} [{i:>5d}/{n_iter:>5d}]\")\n",
+    "                callback(model, i, loss_v, error, loss_fn, batch, pred)\n",
+    "\n",
+    "    loss_v = loss.item()\n",
+    "    error = loss_fn(model.latent, batch['latent']).item()\n",
+    "    scale = loss_fn(torch.zeros_like(batch['latent']), batch['latent']).item()\n",
+    "    relerr = sqrt(error/scale)\n",
+    "    print(\n",
+    "        f\"loss: {loss:.3e}, error: {error:.3e}, relerror: {relerr:.3e} scale: {scale:.3e}[{i:>5d}/{n_iter:>5d}]\")\n",
+    "\n",
+    "    return loss_v, error, relerr, scale, big_losses, big_scale.detach().cpu().numpy()\n",
+    "\n"
    ]
   },
   {
