pred loss calcs

--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -28,12 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
     "import numpy as np\n",
     "from math import sqrt\n",
     "from typing import Any, Dict, Tuple, Optional\n",
-    "\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rc\n",
@@ -43,29 +40,20 @@
     "# plt.rcParams.update({'figure.dpi': 200})\n",
     "plt.rcParams.update({'font.size': 20})\n",
     "%matplotlib inline\n",
-    "load_dotenv(find_dotenv());"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
-    "from math import sqrt\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "load_dotenv(find_dotenv());\n",
+    "\n",
+    "import h5py\n",
     "\n",
     "import torch\n",
-    "import torch.nn.utils.parametrize as parametrize\n",
     "import torch.fft as fft\n",
     "import torch.nn as nn\n",
     "from torch.optim import AdamW\n",
-    "import h5py\n",
     "\n",
     "from src.nn_modules.fourier_2d_generic import SimpleBlock2dGeneric\n",
     "from src.heatmap import multi_heatmap\n",
     "from src.utils import resolve_path\n",
-    "\n",
     "\n",
     "# device = torch.device('cuda')\n",
     "device = torch.device('cpu')\n"
@@ -75,8 +63,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This dataset is packed as as (batch, x, y, time) i.e. batch first, time last.\n"
+    "This dataset is packed as as $(b, x, y, t)$ i.e. batch first, coordinates in the middle, time last. \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -85,7 +78,44 @@
    "outputs": [],
    "source": [
     "data_file = h5py.File(resolve_path('./data/grf_forcing_pico.h5'))\n",
-    "\n"
+    "data = data_file['valid']\n",
+    "\n",
+    "def get_obs(data, t=0, n_steps=2):\n",
+    "    x = data['u'][..., t:t+n_steps]\n",
+    "    latent = data['f'][...]\n",
+    "    return {\n",
+    "        'x': x,\n",
+    "        'latent': latent\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = get_obs(data, 0, 10)['x']\n",
+    "columns = 5\n",
+    "rows = 2\n",
+    "fsize = 6\n",
+    "fig = plt.figure(figsize=(fsize * columns/rows, fsize))\n",
+    "\n",
+    "for i in range(columns*rows):\n",
+    "    img = arr[0,:,:,i]\n",
+    "    ax = fig.add_subplot(rows, columns, i+1)\n",
+    "    plt.imshow(img)\n",
+    "    ax.set_title(img.std())\n",
+    "    ax.set_axis_off()\n",
+    "plt.tight_layout(pad = 1)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## We have a process predictor model"
    ]
   },
   {
@@ -110,6 +140,34 @@
     "process_predictor.load_state_dict(\n",
     "    pp_state_dict\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_forward(x, latent, n_horizon=1, n_steps=2):\n",
+    "    x = torch.as_tensor(x).to(device)\n",
+    "    latent = torch.as_tensor(latent).to(device)\n",
+    "    for i in range(n_steps):\n",
+    "        pred = process_predictor({'x': x[...,-n_steps:], 'latent': latent})['forward']\n",
+    "        x = torch.cat(x, pred)\n",
+    "    return x\n",
+    "\n",
+    "obs = get_obs(data, 0, 10)\n",
+    "\n",
+    "pred = predict_forward(obs['x'], obs['latent'], n_steps=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs['x'][...,-2:].shape"
    ]
   },
   {
