--- a/primitives/conditioning_and_inference.ipynb
+++ b/primitives/conditioning_and_inference.ipynb
@@ -38,7 +38,7 @@
     "Suppose we want to weigh objects with a faulty\n",
     "scale that has some measurement noise. This follows a simple Gaussian model:\n",
     "\n",
-    "$$ measurement | weight \\sim \\mathcal{N}(weight, 0.75) $$"
+    "$$ \\operatorname{measurement} | \\operatorname{weight} \\sim \\mathcal{N}(\\operatorname{weight}, 0.75) $$\n"
    ]
   },
   {
@@ -102,10 +102,9 @@
     "sample histogram. Now let's examine a more complicated model, where we have a\n",
     "good guess of the object's weight. Mathematically, this becomes\n",
     "\n",
-    "$$ weight | guess \\sim \\mathcal{N}(guess, 1) $$\n",
+    "$$ \\operatorname{weight} | \\operatorname{guess} \\sim \\mathcal{N}(\\operatorname{guess}, 1) $$\n",
     "\n",
-    "$$ measurement | weight \\sim \\mathcal{N}(weight, 0.75) $$\n",
-    "\n"
+    "$$ \\operatorname{measurement} | \\operatorname{weight} \\sim \\mathcal{N}(\\operatorname{weight}, 0.75) $$\n"
    ]
   },
   {
@@ -201,10 +200,10 @@
     "We conditioned the `measurement` RV to evaluate to `9.5` so it was not sampled\n",
     "from its respective distribution. Note, however, that this does not affect the\n",
     "probability of the observation. The probability returned by pyro is\n",
-    "$p(measurement = 9.5 | \\mathcal{N}(weight, 0.75)$, and not `1`, even though\n",
+    "$p(\\operatorname{measurement} = 9.5 | \\mathcal{N}(\\operatorname{weight}, 0.75)$, and not `1`, even though\n",
     "there was a `100%` chance of `measurement` evaluating to `9.5`. Similarly, if\n",
     "remove the conditioning on `measurement`, we see that the likelihood of `weight`\n",
-    "does not change, even though $p(weight | measurement) \\neq p(weight)$.\n"
+    "does not change, even though $p(\\operatorname{weight} | \\operatorname{measurement}) \\neq p(\\operatorname{weight})$."
    ]
   },
   {
