--- a/primitives/sampling.ipynb
+++ b/primitives/sampling.ipynb
@@ -99,7 +99,7 @@
     "level of the hierarchy it samples a `0` or `1` from Bernoulli. Then, it samples\n",
     "one of two Gaussians depending on the value samples from the Bernoulli. As we\n",
     "might expect, the result is equivalent to sampling from\n",
-    "$$0.5 * \\mathcal{N}(-1, 0.5) + 0.5 * \\mathcal{N}(1, 0.5)$$\n",
+    "$$\\frac12 \\mathcal{N}(-1, 0.5) + \\frac12 \\mathcal{N}(1, 0.5)$$\n",
     "\n",
     "This is still pretty static. Pyro gives us a lot of power to construct models\n",
     "dynamically and sample from them"
