extend inference notebook

--- a/primitives/conditioning_and_inference.ipynb
+++ b/primitives/conditioning_and_inference.ipynb
@@ -202,7 +202,7 @@
     "from its respective distribution. Note, however, that this does not affect the\n",
     "probability of the observation. The probability returned by pyro is\n",
     "$p(measurement = 9.5 | \\mathcal{N}(weight, 0.75)$, and not `1`, even though\n",
-    "there was a `100%` chance of `measurement` evaluating to `9.5`. Similarly, if\n",
+    "there was a `100%` chance of `measurement` evaluating to `9.5`. Similarly, if we\n",
     "remove the conditioning on `measurement`, we see that the likelihood of `weight`\n",
     "does not change, even though $p(weight | measurement) \\neq p(weight)$.\n"
    ]
@@ -222,10 +222,10 @@
     "trace = poutine.trace(cond_model).get_trace(guess)\n",
     "trace.compute_log_prob()\n",
     "weight_node = trace.nodes[\"weight\"]\n",
-    "print(weight_node[\"value\"], weight_node[\"log_prob\"].exp())\n",
+    "print(f\"weight: {weight_node['value']}, probability: {weight_node['log_prob'].exp()}\")\n",
     "\n",
     "measurement_node = trace.nodes[\"measurement\"]\n",
-    "print(measurement_node[\"value\"], measurement_node[\"log_prob\"].exp())\n"
+    "print(f\"measurement: {measurement_node['value']}, probability: {measurement_node['log_prob'].exp()}\")\n"
    ]
   },
   {
@@ -235,7 +235,46 @@
     "It's important to remember that the `condition` function does not actually\n",
     "change the underlying distribution of the RV. Think of it as saying \"let's\n",
     "pretend that we happend to sample `X` for this variable\". Hence, RVs upstream\n",
-    "of the conditioned variable do not change their likelihood."
+    "of the conditioned variable do not change their likelihood. The same is not true\n",
+    " of downstream RVs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "trace = poutine.trace(model_1).get_trace(guess)\n",
+    "measurements = torch.arange(lb, ub, (ub - lb) / resolution)\n",
+    "measurement_dist = trace.nodes['measurement']['fn']\n",
+    "probs = measurement_dist.log_prob(measurements).exp()\n",
+    "plt.plot(measurements, probs, color=\"blue\")\n",
+    "\n",
+    "cond_model = pyro.condition(model_1, data={\"weight\": 9})\n",
+    "cond_trace = poutine.trace(cond_model).get_trace(guess)\n",
+    "cond_dist = cond_trace.nodes['measurement']['fn']\n",
+    "cond_probs = cond_dist.log_prob(measurements).exp()\n",
+    "plt.plot(measurements, cond_probs, color=\"red\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we plotted the PDF of `measurement` in both an unconditional model (blue)\n",
+    "and a model conditioned on a `weigh = 9` (red). We can see that conditioning on\n",
+    "`weight` changes the probability distribution of the downstream RV\n",
+    "`measurement`. Repeatedly executing the above cell will produce a new\n",
+    "unconditional PDF every time, because it depends on the stochastic sample from\n",
+    "$p(weight | guess=7.5)$. The conditional PDF won't change because it samples\n",
+    "deterministically from $p(weight = 9) = 1$"
    ]
   }
  ],
