forward predictor works

--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -9,11 +9,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Look we can do approximate probabilistic inference with a complicated nueral network!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,11 +65,6 @@
    "source": [
     "This dataset is packed as as $(b, x, y, t)$ i.e. batch first, coordinates in the middle, time last. \n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -151,14 +146,24 @@
     "def predict_forward(x, latent, n_horizon=1, n_steps=2):\n",
     "    x = torch.as_tensor(x).to(device)\n",
     "    latent = torch.as_tensor(latent).to(device)\n",
-    "    for i in range(n_steps):\n",
-    "        pred = process_predictor({'x': x[...,-n_steps:], 'latent': latent})['forward']\n",
-    "        x = torch.cat(x, pred)\n",
-    "    return x\n",
+    "    for i in range(n_horizon):\n",
+    "        pred = process_predictor({'x': x[...,-(n_steps):], 'latent': latent})['forecast']\n",
+    "        x = torch.cat((x, pred), dim=-1)\n",
+    "    return x[...,-n_horizon:]\n",
     "\n",
     "obs = get_obs(data, 0, 10)\n",
     "\n",
-    "pred = predict_forward(obs['x'], obs['latent'], n_steps=10)"
+    "with torch.no_grad():\n",
+    "    pred = predict_forward(obs['x'], obs['latent'], n_horizon=100, n_steps=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs['x'][...,-2:].shape"
    ]
   },
   {
