--- a/primitives/conditioning_and_inference.ipynb
+++ b/primitives/conditioning_and_inference.ipynb
@@ -239,22 +239,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "887521cc036c2176fc4c7c5fad660bcf5f9a9c2cadfc49851d28bf162a40070d"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Cadabra2",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
