diagnostic plotting logic

--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from math import sqrt\n",
+    "from math import sqrt, ceil\n",
     "from typing import Any, Dict, Tuple, Optional\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -90,20 +90,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = get_obs(data, 0, 10)['x']\n",
-    "columns = 5\n",
-    "rows = 2\n",
-    "fsize = 6\n",
-    "fig = plt.figure(figsize=(fsize * columns/rows, fsize))\n",
     "\n",
-    "for i in range(columns*rows):\n",
-    "    img = arr[0,:,:,i]\n",
-    "    ax = fig.add_subplot(rows, columns, i+1)\n",
-    "    plt.imshow(img)\n",
-    "    ax.set_title(img.std())\n",
-    "    ax.set_axis_off()\n",
-    "plt.tight_layout(pad = 1)\n",
-    "plt.show()"
+    "def multi_img_time(x, batch=0, interval=1, n_cols=None, fsize=6):\n",
+    "    \"\"\"\n",
+    "    Plot multiple timesteps of an array (time last)\n",
+    "    \"\"\"\n",
+    "    steps = range(0, x.shape[-1], interval)\n",
+    "    if n_cols is None:\n",
+    "        n_cols = len(steps)\n",
+    "    print(steps, len(steps), n_cols)\n",
+    "    n_rows = ceil(len(steps) / n_cols)\n",
+    "    fig, axes = plt.subplots(n_rows, n_cols, figsize=(fsize * n_cols/n_rows, fsize));\n",
+    "    axes = axes.flatten()\n",
+    "    for ax in axes:\n",
+    "        ax.set_axis_off()\n",
+    "    for i, ax in zip(steps, axes):\n",
+    "        ax.imshow(x[batch,..., i])\n",
+    "    plt.tight_layout()\n",
+    "    return fig\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = get_obs(data, 0, 10)['x']\n",
+    "\n",
+    "multi_img_time(arr, n_cols=2);\n"
    ]
   },
   {
@@ -163,16 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs['x'][...,-2:].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obs['x'][...,-2:].shape"
+    "multi_img_time(pred.cpu().numpy(), n_cols=5, interval=5);\n"
    ]
   },
   {
