more intro, that will do for now

--- a/primitives/02-conditioning_and_inference.ipynb
+++ b/primitives/02-conditioning_and_inference.ipynb
@@ -200,7 +200,7 @@
     "We conditioned the `measurement` RV to evaluate to `9.5` so it was not sampled\n",
     "from its respective distribution. Note, however, that this does not affect the\n",
     "probability of the observation. The probability returned by pyro is\n",
-    "$p(measurement = 9.5 | \\mathcal{N}(weight, 0.75)$, and not `1`, even though\n",
+    "$p(\\operatorname{measurement} = 9.5 | \\mathcal{N}(weight, 0.75)$, and not `1`, even though\n",
     "there was a `100%` chance of `measurement` evaluating to `9.5`. Similarly, if we\n",
     "remove the conditioning on `measurement`, we see that the likelihood of `weight`\n",
     "does not change, even though $p(\\operatorname{weight} | \\operatorname{measurement}) \\neq p(\\operatorname{weight})$."
