--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -21,10 +21,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suppose we want to weigh objects with a faulty\n",
-    "scale that has some measurement noise. This follows a simple Gaussian model:\n",
+    "Let's return to the example from a previous notebook. \n",
+    "Suppose we want to weigh objects with a faulty scale that has some measurement noise.\n",
+    "This follows a simple Gaussian model:\n",
     "\n",
-    "$$ \\operatorname{measurement} | \\operatorname{weight} \\sim \\mathcal{N}(\\operatorname{weight}, 0.75) $$\n"
+    "$$ \\operatorname{measurement} | \\operatorname{weight} \\sim \\mathcal{N}(\\operatorname{weight}, 0.75).$$\n"
    ]
   },
   {
