--- a/probabilistic_programming_background.ipynb
+++ b/probabilistic_programming_background.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# What is probabilistic programming? And why?\n",
     "\n",
-    "A probabilistic programming system is a system for specifying stochastic generative models, and reasoning about them."
+    "A probabilistic programming system is a system for specifying stochastic generative models, and reasoning about them.\n",
+    "Or, as [Fabiana Clemente puts it](https://towardsdatascience.com/intro-to-probabilistic-programming-b47c4e926ec5)\n",
+    "\n",
+    "> Probabilistic programming is about doing statistics using the tools of computer science."
    ]
   },
   {
@@ -22,36 +25,41 @@
     "\n",
     "There are [too many PPLs](https://en.wikipedia.org/wiki/Probabilistic_programming)!\n",
     "But pyro is the one that is probably closest to gaining critical mass.\n",
-    "It is not the simplest one, but it _does_ integrate most of the hippest net techniques."
+    "It is not the simplest one, but it _does_ integrate high quality versions of hip neural network methods into the classic PPL methods.\n",
+    "It is built of pytorch, which many of us here already use.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Other PPLs\n",
     "\n",
-    "## references\n",
+    "* [Stan](https://mc-stan.org/) (R/Python/CLI/…)\n",
+    "* [Turing.jl](https://turing.ml/stable/) (julia)\n",
+    "* [Gen](https://www.gen.dev/) (julia)\n",
+    "* [NumPyro documentation](http://num.pyro.ai/en/stable/) (jax)\n",
+    "* [google/edward2: A simple probabilistic programming language.](https://github.com/google/edward2) (Tensorflow/Jax)\n",
     "\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "* Jan-Willem van de Meent, Brooks Paige, Hongseok Yang, Frank Wood, [An Introduction to Probabilistic Programming](https://arxiv.org/abs/1809.10756)\n",
     "* [Bayes for Hackers](https://github.com/CamDavidsonPilon/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers)\n",
     "* [Rob’s course](https://robsalomone.com/course-deep-probabilistic-models/) is nice and he has given us permission to use it if we credit him. - see also https://slides.com/robsal/autodiff/#/70\n",
-    "* a neat [databricks example](https://databricks.com/blog/2021/06/29/using-bayesian-hierarchical-models-to-infer-the-disease-parameters-of-covid-19.html)\n",
-    "\n",
-    "Cheng recommends keeping an eye on [NeurIPS tutorials](https://blog.neurips.cc/2021/06/01/neurips-2021-tutorials/), and forward-referencing them.\n",
-    "\n",
-    "[Statistical Rethinking | Richard McElreath](https://xcelab.net/rm/statistical-rethinking/) has gone viral as an introduction to some of this stuff.\n",
-    "It is [available on O’Reilly](https://learning.oreilly.com/library/view/statistical-rethinking-2nd/9780429639142/) (free for CSIRO people).\n",
-    "There is a \n",
-    "[PyMC3](https://github.com/gbosquechacon/statrethink_course_in_pymc3)\n",
-    "[and a numpyro](https://github.com/asuagar/statrethink-course-in-numpyro/)\n",
-    "version.\n",
-    "\n",
-    "Further references:\n",
-    "\n",
-    "* [that ppl guide](https://arxiv.org/abs/1809.10756) that Cheng found.\n",
-    "\n",
+    "* [Statistical Rethinking | Richard McElreath](https://xcelab.net/rm/statistical-rethinking/) has gone viral as an introduction to some of this stuff.\n",
+    "  It is [available on O’Reilly](https://learning.oreilly.com/library/view/statistical-rethinking-2nd/9780429639142/) (free for CSIRO people).\n",
+    "  There is a \n",
+    "  [PyMC3](https://github.com/gbosquechacon/statrethink_course_in_pymc3)\n",
+    "  [and a numpyro](https://github.com/asuagar/statrethink-course-in-numpyro/) version.\n",
+    "* Wi Ji Ma, Konrad Paul Kording, Daniel Goldreich, [Bayesian models of perception and action](https://www.bayesianmodeling.com)\n",
+    "* Noah D. Goodman, Joshua B. Tenenbaum et al, [Probabilistic Models of Cognition - 2nd Edition](http://probmods.org/)\n",
+    "* Noah D. Goodman and Andreas Stuhlmüller, [The Design and Implementation of Probabilistic Programming Languages](http://dippl.org/)\n",
     "\n",
     "## Links discussed\n",
     "\n",
+    "* a neat [databricks example](https://databricks.com/blog/2021/06/29/using-bayesian-hierarchical-models-to-infer-the-disease-parameters-of-covid-19.html)\n",
     "* [Example: analyzing baseball stats with MCMC](http://pyro.ai/examples/baseball.html)\n",
     "* [Example: hierarchical mixed-effect hidden Markov models](http://pyro.ai/examples/mixed_hmm.html)\n",
     "* [Example: Inference with Markov Chain Monte Carlo](http://pyro.ai/examples/mcmc.html)\n",
